[package]
name = "hexbin"
version = "0.1.0"
edition = "2021"
description = "A command-line utility to travel between the realms of hexadecimal and binary."

readme = "README.md"

keywords = ["cli", "conversion", "hexadecimal", "binary", "utility"]
authors = ["Owen Friedman <5-pebble@protonmail.com>"]
repository = "https://github.com/5-pebbles/hexbin"
homepage = "https://github.com/5-pebbles/hexbin"

license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "color"] }
num-bigint = "0.4.5"
regex = "1.5.4"

[dependencies.num-traits]
version = "^0.2.19"
